tests/programs/errors/type_mismatch.flow
module tests.errors.type_mismatch

fn add(x: int, y: int): int = x + y

fn main() {
    let result: string = add(1, 2)
}
